updated realtime activity with new activities

--- a/Human_Fall_Detection.ipynb
+++ b/Human_Fall_Detection.ipynb
@@ -2330,7 +2330,7 @@
     }
    ],
    "source": [
-    "model.save('fall_detect_v3.model')\n",
+    "# model.save('fall_detect_v3.model')\n",
     "model.save('fall_detect_v3.h5')"
    ]
   },
